--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 
 <body>
   <app-root></app-root>
-<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-5TJQOUI2.js" type="module"></script></body>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-IDRURPQQ.js" type="module"></script></body>
 
 </html>
